fixed counter cutting off numbers

--- a/css/yams.css
+++ b/css/yams.css
@@ -1,8 +1,8 @@
 body {
     /* font-family: 'Rubik Mono One', sans-serif;*/
     font-family: 'Montserrat', sans-serif;
-    margin: 0 0 0 0;
     height: 100%;
+    margin: 0;
 }
 
 #mainYam {
